[package]
name = "zenroom_ring"
version = "0.1.0"
authors = ["Julian Popescu <jpopesculian@gmail.com>"]
edition = "2018"

[lib]
name = "zenroom_ring"
crate_type = ["staticlib", "rlib"]

[dependencies]
libc = "0.2"
untrusted = "0.6"

[dependencies.ring]
version = "0.14"
default-features = false

[build-dependencies]
cbindgen = "0.9.0"
